# app/api_components/admin/v1/schemas/inputs/model_module_update_bulk_input.rb
@@ -1,0 +1,24 @@
+# frozen_string_literal: true
+
+module Admin
+  module V1
+    module Schemas
+      module Inputs
+        class ModelModuleUpdateBulkInput
+          include Rswag::SchemaComponents::Component
+
+          schema({
+            type: :object,
+            properties: {
+              ids: {type: :array, items: {type: :string, format: :uuid}},
+              active: {type: :boolean},
+              hidden: {type: :boolean}
+            },
+            additionalProperties: false,
+            required: %w[ids]
+          })
+        end
+      end
+    end
+  end
+end
